Update metadata and guideline rule

--- a/gdl2/ACR_TI-RADS_calculator.v1.test.yml
+++ b/gdl2/ACR_TI-RADS_calculator.v1.test.yml
@@ -48,7 +48,7 @@ test_cases:
     1:
       gt0009|ACR TI-RADS points: 3
       gt0011|TR grade: TR3 – Mildly Suspicious
-      gt0012|Further actions: No Fine Needle Aspiration
+      gt0012|Further actions: FNA if ≥ 2.5 cm. Follow if ≥ 1.5 cm
 - id: ACR TI-RADS points 6
   input:
     1:
