--- a/gdl2/SCORTEN_scale_guideline.v1.test.yml
+++ b/gdl2/SCORTEN_scale_guideline.v1.test.yml
@@ -14,7 +14,7 @@ test_cases:
   expected_output:
     1:
       gt0013|Mortality rate: 3.2%
-      gt0011|Total score: 0
+      gt0011|SCORTEN scale: 0
 - id: score 1
   input:
     1:
@@ -28,7 +28,7 @@ test_cases:
   expected_output:
     1:
       gt0013|Mortality rate: 3.2%
-      gt0011|Total score: 1
+      gt0011|SCORTEN scale: 1
 - id: score 2
   input:
     1:
@@ -42,7 +42,7 @@ test_cases:
   expected_output:
     1:
       gt0013|Mortality rate: 12.1%
-      gt0011|Total score: 2
+      gt0011|SCORTEN scale: 2
 - id: score 3
   input:
     1:
@@ -56,7 +56,7 @@ test_cases:
   expected_output:
     1:
       gt0013|Mortality rate: 35.3%
-      gt0011|Total score: 3
+      gt0011|SCORTEN scale: 3
 - id: score 4
   input:
     1:
@@ -70,7 +70,7 @@ test_cases:
   expected_output:
     1:
       gt0013|Mortality rate: 58.3%
-      gt0011|Total score: 4
+      gt0011|SCORTEN scale: 4
 - id: score 5
   input:
     1:
@@ -84,7 +84,7 @@ test_cases:
   expected_output:
     1:
       gt0013|Mortality rate: more than 90%
-      gt0011|Total score: 5
+      gt0011|SCORTEN scale: 5
 - id: score 6
   input:
     1:
@@ -98,7 +98,7 @@ test_cases:
   expected_output:
     1:
       gt0013|Mortality rate: more than 90%
-      gt0011|Total score: 6
+      gt0011|SCORTEN scale: 6
 - id: score 7
   input:
     1:
@@ -112,4 +112,4 @@ test_cases:
   expected_output:
     1:
       gt0013|Mortality rate: more than 90%
-      gt0011|Total score: 7
+      gt0011|SCORTEN scale: 7
