--- a/gdl2/PROCAM_score_guideline.v1.test.yml
+++ b/gdl2/PROCAM_score_guideline.v1.test.yml
@@ -14,7 +14,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 8|local::at0040|≥160 mm Hg|
   expected_output:
     1:
-      gt0013|Estimated Risk of Acute Coronary Events in 10 y: ≥40.00%
+      gt0023|Estimated Risk of Acute Coronary Events in 10 y: ≥40.00%
       gt0012|Total score: 87
 - id: score 0
   input:
@@ -29,7 +29,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 0|local::at0036|<120 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': <1.00%
+      gt0023|Estimated Risk of Acute Coronary Events in 10 y: <1.00%
       gt0012|Total score: 0
 - id: score 6
   input:
@@ -44,7 +44,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 0|local::at0036|<120 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': <1.00%
+      gt0023|Estimated Risk of Acute Coronary Events in 10 y: <1.00%
       gt0012|Total score: 6
 - id: score 11
   input:
@@ -59,7 +59,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 0|local::at0036|<120 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': <1.00%
+      'gt0023|Estimated Risk of Acute Coronary Events in 10 y ': <1.00%
       gt0012|Total score: 11
 - id: score 38
   input:
@@ -74,7 +74,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 2|local::at0037|120–129 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': 5.00–9.99%
+      'gt0023|Estimated Risk of Acute Coronary Events in 10 y ': 5.00–9.99%
       gt0012|Total score: 38
 - id: score 39
   input:
@@ -89,7 +89,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 3|local::at0038|130–139 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': 5.00–9.99%
+      'gt0023|Estimated Risk of Acute Coronary Events in 10 y ': 5.00–9.99%
       gt0012|Total score: 39
 - id: score 41
   input:
@@ -104,7 +104,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 5|local::at0039|140–159 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': 5.00–9.99%
+      'gt0023|Estimated Risk of Acute Coronary Events in 10 y ': 5.00–9.99%
       gt0012|Total score: 41
 - id: score 45
   input:
@@ -119,7 +119,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 8|local::at0040|≥160 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': 10.00–19.99%
+      'gt0023|Estimated Risk of Acute Coronary Events in 10 y ': 10.00–19.99%
       gt0012|Total score: 45
 - id: score 46
   input:
@@ -134,7 +134,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 8|local::at0040|≥160 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': 10.00–19.99%
+      'gt0023|Estimated Risk of Acute Coronary Events in 10 y ': 10.00–19.99%
       gt0012|Total score: 46
 - id: score 49
   input:
@@ -149,7 +149,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 8|local::at0040|≥160 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': 10.00–19.99%
+      'gt0023|Estimated Risk of Acute Coronary Events in 10 y ': 10.00–19.99%
       gt0012|Total score: 49
 - id: score 52
   input:
@@ -164,7 +164,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 8|local::at0040|≥160 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': 10.00–19.99%
+      'gt0023|Estimated Risk of Acute Coronary Events in 10 y ': 10.00–19.99%
       gt0012|Total score: 52
 - id: score 57
   input:
@@ -179,7 +179,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 8|local::at0040|≥160 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': 20.00–39.99%
+      'gt0023|Estimated Risk of Acute Coronary Events in 10 y ': 20.00–39.99%
       gt0012|Total score: 57
 - id: score 61
   input:
@@ -194,7 +194,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 8|local::at0040|≥160 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': 20.00–39.99%
+      'gt0023|Estimated Risk of Acute Coronary Events in 10 y ': 20.00–39.99%
       gt0012|Total score: 61
 - id: score 67
   input:
@@ -209,7 +209,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 8|local::at0040|≥160 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': ≥40.00%
+      'gt0023|Estimated Risk of Acute Coronary Events in 10 y ': ≥40.00%
       gt0012|Total score: 67
 - id: score 72
   input:
@@ -224,7 +224,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 8|local::at0040|≥160 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': ≥40.00%
+      'gt0023|Estimated Risk of Acute Coronary Events in 10 y ': ≥40.00%
       gt0012|Total score: 72
 - id: score 82
   input:
@@ -239,7 +239,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 8|local::at0040|≥160 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': ≥40.00%
+      'gt0023|Estimated Risk of Acute Coronary Events in 10 y ': ≥40.00%
       gt0012|Total score: 82
 - id: score 20
   input:
@@ -254,7 +254,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 0|local::at0036|<120 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': <1.00%
+      'gt0023|Estimated Risk of Acute Coronary Events in 10 y ': <1.00%
       gt0012|Total score: 20
 - id: score 21
   input:
@@ -269,7 +269,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 2|local::at0037|120–129 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': 1.00–1.99%
+      'gt0023|Estimated Risk of Acute Coronary Events in 10 y ': 1.00–1.99%
       gt0012|Total score: 21
 - id: score 29
   input:
@@ -284,7 +284,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 2|local::at0037|120–129 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': 2.00 –4.99%
+      'gt0023|Estimated Risk of Acute Coronary Events in 10 y ': 2.00 –4.99%
       gt0012|Total score: 29
 - id: score 38
   input:
@@ -299,7 +299,7 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 2|local::at0037|120–129 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': 5.00–9.99%
+      'gt0023|Estimated Risk of Acute Coronary Events in 10 y ': 5.00–9.99%
       gt0012|Total score: 38
 - id: score 46
   input:
@@ -314,5 +314,5 @@ test_cases:
       gt0010|Systolic blood pressure, mmHg: 0|local::at0036|<120 mm Hg|
   expected_output:
     1:
-      'gt0013|Estimated Risk of Acute Coronary Events in 10 y ': 10.00–19.99%
+      'gt0023|Estimated Risk of Acute Coronary Events in 10 y ': 10.00–19.99%
       gt0012|Total score: 46
