--- a/gdl2/Thompson_score.v1.test.yml
+++ b/gdl2/Thompson_score.v1.test.yml
@@ -1,39 +1,75 @@
 guidelines:
-  1: thompson.v0
+  1: Thompson_score.v1
 test_cases:
 - id: 1. no entry (negative test)
   input:
     1: {}
   expected_output:
     1: {}
-- id: 2. age>1a (negative test)
+- id: 2. age=1a (negative test)
   input:
     1:
-      gt0003|Age: 2,a
+      gt0003|Age: 1,a
+      gt0005|Tone: 0|local::at0005|Normal|
+      gt0006|LOC: 0|local::at0005|Normal|
+      gt0007|Fits: 0|local::at0015|None|
+      gt0008|Posture: 0|local::at0005|Normal|
+      gt0009|Moro: 0|local::at0005|Normal|
+      gt0010|Grasp: 0|local::at0005|Normal|
+      gt0011|Suck: 0|local::at0005|Normal|
+      gt0012|Respiration: 0|local::at0005|Normal|
+      gt0013|Fontanelle: 0|local::at0005|Normal|
   expected_output:
     1: {}
-- id: 3. age>12mo (negative test)
+- id: 3. age=1mo (negative test)
   input:
     1:
-      gt0003|Age: 13,mo
+      gt0003|Age: 1,mo
+      gt0005|Tone: 0|local::at0005|Normal|
+      gt0006|LOC: 0|local::at0005|Normal|
+      gt0007|Fits: 0|local::at0015|None|
+      gt0008|Posture: 0|local::at0005|Normal|
+      gt0009|Moro: 0|local::at0005|Normal|
+      gt0010|Grasp: 0|local::at0005|Normal|
+      gt0011|Suck: 0|local::at0005|Normal|
+      gt0012|Respiration: 0|local::at0005|Normal|
+      gt0013|Fontanelle: 0|local::at0005|Normal|
   expected_output:
     1: {}
-- id: 4. age>52wk (negative test)
+- id: 4. age>4wk (negative test)
   input:
     1:
-      gt0003|Age: 53,wk
+      gt0003|Age: 5,wk
+      gt0005|Tone: 0|local::at0005|Normal|
+      gt0006|LOC: 0|local::at0005|Normal|
+      gt0007|Fits: 0|local::at0015|None|
+      gt0008|Posture: 0|local::at0005|Normal|
+      gt0009|Moro: 0|local::at0005|Normal|
+      gt0010|Grasp: 0|local::at0005|Normal|
+      gt0011|Suck: 0|local::at0005|Normal|
+      gt0012|Respiration: 0|local::at0005|Normal|
+      gt0013|Fontanelle: 0|local::at0005|Normal|
   expected_output:
     1: {}
-- id: 5. age>365d (negative test)
+- id: 5. age>28d (negative test)
   input:
     1:
-      gt0003|Age: 366,d
+      gt0003|Age: 29,d
+      gt0005|Tone: 0|local::at0005|Normal|
+      gt0006|LOC: 0|local::at0005|Normal|
+      gt0007|Fits: 0|local::at0015|None|
+      gt0008|Posture: 0|local::at0005|Normal|
+      gt0009|Moro: 0|local::at0005|Normal|
+      gt0010|Grasp: 0|local::at0005|Normal|
+      gt0011|Suck: 0|local::at0005|Normal|
+      gt0012|Respiration: 0|local::at0005|Normal|
+      gt0013|Fontanelle: 0|local::at0005|Normal|
   expected_output:
     1: {}
 - id: 6. no Tone (negative test)
   input:
     1:
-      gt0003|Age: 5,d
+      gt0003|Age: 28,d
       gt0006|LOC: 0|local::at0005|Normal|
       gt0007|Fits: 0|local::at0015|None|
       gt0008|Posture: 0|local::at0005|Normal|
@@ -47,7 +83,7 @@ test_cases:
 - id: 7. no LOC (negative test)
   input:
     1:
-      gt0003|Age: 5,d
+      gt0003|Age: 28,d
       gt0005|Tone: 0|local::at0005|Normal|
       gt0007|Fits: 0|local::at0015|None|
       gt0008|Posture: 0|local::at0005|Normal|
@@ -61,7 +97,7 @@ test_cases:
 - id: 8. no Fits (negative test)
   input:
     1:
-      gt0003|Age: 5,d
+      gt0003|Age: 28,d
       gt0005|Tone: 0|local::at0005|Normal|
       gt0006|LOC: 0|local::at0005|Normal|
       gt0008|Posture: 0|local::at0005|Normal|
@@ -75,7 +111,7 @@ test_cases:
 - id: 9. no Posture (negative test)
   input:
     1:
-      gt0003|Age: 5,d
+      gt0003|Age: 28,d
       gt0005|Tone: 0|local::at0005|Normal|
       gt0006|LOC: 0|local::at0005|Normal|
       gt0007|Fits: 0|local::at0015|None|
@@ -89,7 +125,7 @@ test_cases:
 - id: 10. no Moro (negative test)
   input:
     1:
-      gt0003|Age: 5,d
+      gt0003|Age: 28,d
       gt0005|Tone: 0|local::at0005|Normal|
       gt0006|LOC: 0|local::at0005|Normal|
       gt0007|Fits: 0|local::at0015|None|
@@ -103,7 +139,7 @@ test_cases:
 - id: 11. no Grasp (negative test)
   input:
     1:
-      gt0003|Age: 5,d
+      gt0003|Age: 28,d
       gt0005|Tone: 0|local::at0005|Normal|
       gt0006|LOC: 0|local::at0005|Normal|
       gt0007|Fits: 0|local::at0015|None|
@@ -117,7 +153,7 @@ test_cases:
 - id: 12. no Suck (negative test)
   input:
     1:
-      gt0003|Age: 5,d
+      gt0003|Age: 28,d
       gt0005|Tone: 0|local::at0005|Normal|
       gt0006|LOC: 0|local::at0005|Normal|
       gt0007|Fits: 0|local::at0015|None|
@@ -131,7 +167,7 @@ test_cases:
 - id: 13. no Respiration (negative test)
   input:
     1:
-      gt0003|Age: 5,d
+      gt0003|Age: 28,d
       gt0005|Tone: 0|local::at0005|Normal|
       gt0006|LOC: 0|local::at0005|Normal|
       gt0007|Fits: 0|local::at0015|None|
@@ -145,7 +181,7 @@ test_cases:
 - id: 14. no Fontanelle (negative test)
   input:
     1:
-      gt0003|Age: 5,d
+      gt0003|Age: 28,d
       gt0005|Tone: 0|local::at0005|Normal|
       gt0006|LOC: 0|local::at0005|Normal|
       gt0007|Fits: 0|local::at0015|None|
@@ -159,7 +195,7 @@ test_cases:
 - id: 15. all 0-value Normal score
   input:
     1:
-      gt0003|Age: 5,d
+      gt0003|Age: 28,d
       gt0005|Tone: 0|local::at0005|Normal|
       gt0006|LOC: 0|local::at0005|Normal|
       gt0007|Fits: 0|local::at0015|None|
@@ -171,12 +207,12 @@ test_cases:
       gt0013|Fontanelle: 0|local::at0005|Normal|
   expected_output:
     1:
-      gt0015|Total score: 0
-      gt0017|Interpretation: Normal
+      gt0017|Thompson score: 0
+      gt0019|Interpretation: Normal
 - id: 16. all 1-value Total 9-HIE Mild Severity
   input:
     1:
-      gt0003|Age: 5,d
+      gt0003|Age: 28,d
       gt0005|Tone: 1|local::at0006|Hyper|
       gt0006|LOC: 1|local::at0011|Hyper alert, stare|
       gt0007|Fits: 1|local::at0016|Infrequent,  less than 3 per day|
@@ -188,12 +224,12 @@ test_cases:
       gt0013|Fontanelle: 1|local::at0042|Full, not tense|
   expected_output:
     1:
-      gt0015|Total score: 9
-      gt0017|Interpretation: HIE Mild Severity
+      gt0017|Thompson score: 9
+      gt0019|Interpretation: HIE Mild Severity
 - id: 17.all 2-value Total 18- HIE Severe
   input:
     1:
-      gt0003|Age: 14,wk
+      gt0003|Age: 28,d
       gt0005|Tone: 2|local::at0007|Hypo|
       gt0006|LOC: 2|local::at0012|Lethargic|
       gt0007|Fits: 2|local::at0017|Frequent, more than 2 per day|
@@ -205,12 +241,12 @@ test_cases:
       gt0013|Fontanelle: 2|local::at0043|Tense|
   expected_output:
     1:
-      gt0015|Total score: 18
-      gt0017|Interpretation: HIE Severe
+      gt0017|Thompson score: 18
+      gt0019|Interpretation: HIE Severe
 - id: 18. all 2-value or 3 value Total 22-HIE Severe
   input:
     1:
-      gt0003|Age: 14,wk
+      gt0003|Age: 28,d
       gt0005|Tone: 3|local::at0008|Flaccid|
       gt0006|LOC: 3|local::at0013|Comatose|
       gt0007|Fits: 2|local::at0017|Frequent, more than 2 per day|
@@ -222,56 +258,56 @@ test_cases:
       gt0013|Fontanelle: 2|local::at0043|Tense|
   expected_output:
     1:
-      gt0015|Total score: 22
-      gt0017|Interpretation: HIE Severe
+      gt0017|Thompson score: 22
+      gt0019|Interpretation: HIE Severe
 - id: 19. random HIE Mild Severity
   input:
     1:
-      gt0003|Age: 3,mo
-      gt0005|Tone: 1|local::at0006|Hyper|
-      gt0006|LOC: 0|local::at0005|Normal|
+      gt0003|Age: 2,wk
+      gt0005|Tone: 3|local::at0008|Flaccid|
+      gt0006|LOC: 3|local::at0013|Comatose|
       gt0007|Fits: 0|local::at0015|None|
       gt0008|Posture: 0|local::at0005|Normal|
-      gt0009|Moro: 1|local::at0025|Partial|
+      gt0009|Moro: 0|local::at0005|Normal|
+      gt0010|Grasp: 0|local::at0005|Normal|
+      gt0011|Suck: 0|local::at0005|Normal|
+      gt0012|Respiration: 0|local::at0005|Normal|
+      gt0013|Fontanelle: 0|local::at0005|Normal|
+  expected_output:
+    1:
+      gt0017|Thompson score: 6
+      gt0019|Interpretation: HIE Mild Severity
+- id: 20. random HIE Moderate Severity
+  input:
+    1:
+      gt0003|Age: 2,wk
+      gt0005|Tone: 3|local::at0008|Flaccid|
+      gt0006|LOC: 3|local::at0013|Comatose|
+      gt0007|Fits: 0|local::at0015|None|
+      gt0008|Posture: 2|local::at0021|Strong, distal flexion|
+      gt0009|Moro: 2|local::at0026|Absent|
       gt0010|Grasp: 1|local::at0029|Poor|
       gt0011|Suck: 0|local::at0005|Normal|
       gt0012|Respiration: 0|local::at0005|Normal|
       gt0013|Fontanelle: 0|local::at0005|Normal|
   expected_output:
     1:
-      gt0015|Total score: 3
-      gt0017|Interpretation: HIE Mild Severity
-- id: 20. random HIE Moderate Severity
+      gt0017|Thompson score: 11
+      gt0019|Interpretation: HIE Moderate Severity
+- id: 21. random HIE Severe 
   input:
     1:
-      gt0003|Age: 3,mo
-      gt0005|Tone: 1|local::at0006|Hyper|
-      gt0006|LOC: 2|local::at0012|Lethargic|
+      gt0003|Age: 2,wk
+      gt0005|Tone: 3|local::at0008|Flaccid|
+      gt0006|LOC: 3|local::at0013|Comatose|
       gt0007|Fits: 0|local::at0015|None|
-      gt0008|Posture: 0|local::at0005|Normal|
-      gt0009|Moro: 1|local::at0025|Partial|
+      gt0008|Posture: 2|local::at0021|Strong, distal flexion|
+      gt0009|Moro: 2|local::at0026|Absent|
       gt0010|Grasp: 1|local::at0029|Poor|
-      gt0011|Suck: 2|local::at0034|Absent with or without bites|
+      gt0011|Suck: 0|local::at0005|Normal|
       gt0012|Respiration: 3|local::at0039|Intermittent Positive Pressure Ventilation (apnoea)|
       gt0013|Fontanelle: 1|local::at0042|Full, not tense|
   expected_output:
     1:
-      gt0015|Total score: 11
-      gt0017|Interpretation: HIE Moderate Severity
-- id: 21. random HIE Severe 
-  input:
-    1:
-      gt0003|Age: 3,mo
-      gt0005|Tone: 1|local::at0006|Hyper|
-      gt0006|LOC: 2|local::at0012|Lethargic|
-      gt0007|Fits: 1|local::at0016|Infrequent,  less than 3 per day|
-      gt0008|Posture: 3|local::at0022|Decerebrate|
-      gt0009|Moro: 1|local::at0025|Partial|
-      gt0010|Grasp: 1|local::at0029|Poor|
-      gt0011|Suck: 2|local::at0034|Absent with or without bites|
-      gt0012|Respiration: 3|local::at0039|Intermittent Positive Pressure Ventilation (apnoea)|
-      gt0013|Fontanelle: 2|local::at0043|Tense|
-  expected_output:
-    1:
-      gt0015|Total score: 16
-      gt0017|Interpretation: HIE Severe
+      gt0017|Thompson score: 15
+      gt0019|Interpretation: HIE Severe
