RCVS2 score adjustments

--- a/gdl2/rcvs2_guideline.v1.test.yml
+++ b/gdl2/rcvs2_guideline.v1.test.yml
@@ -1,5 +1,5 @@
 guidelines:
-  1: new_guideline.v0
+  1: rcvs2_guideline.v1
 test_cases:
 - id: 1. No input
   input:
@@ -9,32 +9,32 @@ test_cases:
 - id: 2. Test precondition age >= 18 (negative test)
   input:
     1:
-      gt0003|Recurrent or single TCH: 5|local::at0005|Present|
-      gt0004|Carotid artery: -2|local::at0008|Affected|
+      gt0003|Recurrent or single TCH: 0|local::at0006|Absent|
+      gt0004|Carotid artery: 0|local::at0009|Not affected|
       gt0005|Vasoconstrictive trigger: 0|local::at0012|Absent|
       gt0006|Sex: 1|local::at0014|Female|
-      gt0007|Subarachnoid hemorrhage: 0|local::at0018|Absent|
+      gt0007|Subarachnoid hemorrhage: 1|local::at0017|Present|
       gt0022|Age: 16,a
   expected_output:
     1: {}
 - id: 3. Test precondition age <= 55 (negative test)
   input:
     1:
-      gt0003|Recurrent or single TCH: 5|local::at0005|Present|
-      gt0004|Carotid artery: -2|local::at0008|Affected|
+      gt0003|Recurrent or single TCH: 0|local::at0006|Absent|
+      gt0004|Carotid artery: 0|local::at0009|Not affected|
       gt0005|Vasoconstrictive trigger: 0|local::at0012|Absent|
       gt0006|Sex: 1|local::at0014|Female|
-      gt0007|Subarachnoid hemorrhage: 0|local::at0018|Absent|
+      gt0007|Subarachnoid hemorrhage: 1|local::at0017|Present|
       gt0022|Age: 60,a
   expected_output:
     1: {}
 - id: 4. No recurrent or single TCH (negative test)
   input:
     1:
-      gt0004|Carotid artery: -2|local::at0008|Affected|
+      gt0004|Carotid artery: 0|local::at0009|Not affected|
       gt0005|Vasoconstrictive trigger: 0|local::at0012|Absent|
       gt0006|Sex: 1|local::at0014|Female|
-      gt0007|Subarachnoid hemorrhage: 0|local::at0018|Absent|
+      gt0007|Subarachnoid hemorrhage: 1|local::at0017|Present|
       gt0022|Age: 44,a
   expected_output:
     1: {}
@@ -44,7 +44,7 @@ test_cases:
       gt0003|Recurrent or single TCH: 5|local::at0005|Present|
       gt0005|Vasoconstrictive trigger: 0|local::at0012|Absent|
       gt0006|Sex: 1|local::at0014|Female|
-      gt0007|Subarachnoid hemorrhage: 0|local::at0018|Absent|
+      gt0007|Subarachnoid hemorrhage: 1|local::at0017|Present|
       gt0022|Age: 44,a
   expected_output:
     1: {}
@@ -54,7 +54,7 @@ test_cases:
       gt0003|Recurrent or single TCH: 5|local::at0005|Present|
       gt0004|Carotid artery: -2|local::at0008|Affected|
       gt0006|Sex: 1|local::at0014|Female|
-      gt0007|Subarachnoid hemorrhage: 0|local::at0018|Absent|
+      gt0007|Subarachnoid hemorrhage: 1|local::at0017|Present|
       gt0022|Age: 44,a
   expected_output:
     1: {}
@@ -63,8 +63,8 @@ test_cases:
     1:
       gt0003|Recurrent or single TCH: 5|local::at0005|Present|
       gt0004|Carotid artery: -2|local::at0008|Affected|
-      gt0005|Vasoconstrictive trigger: 3|local::at0011|Present|
-      gt0007|Subarachnoid hemorrhage: 0|local::at0018|Absent|
+      gt0005|Vasoconstrictive trigger: 0|local::at0012|Absent|
+      gt0007|Subarachnoid hemorrhage: 1|local::at0017|Present|
       gt0022|Age: 44,a
   expected_output:
     1: {}
@@ -73,7 +73,7 @@ test_cases:
     1:
       gt0003|Recurrent or single TCH: 5|local::at0005|Present|
       gt0004|Carotid artery: -2|local::at0008|Affected|
-      gt0005|Vasoconstrictive trigger: 3|local::at0011|Present|
+      gt0005|Vasoconstrictive trigger: 0|local::at0012|Absent|
       gt0006|Sex: 1|local::at0014|Female|
       gt0022|Age: 44,a
   expected_output:
@@ -86,10 +86,10 @@ test_cases:
       gt0005|Vasoconstrictive trigger: 0|local::at0012|Absent|
       gt0006|Sex: 1|local::at0014|Female|
       gt0007|Subarachnoid hemorrhage: 1|local::at0017|Present|
-      gt0022|Age: 44,a
+      gt0022|Age: 33,a
   expected_output:
     1:
-      gt0009|Total score: 2
+      gt0009|RCVS2 score: 2
       gt0011|Diagnosis: Negative
 - id: 10. Interpretation Equivocal
   input:
@@ -99,10 +99,10 @@ test_cases:
       gt0005|Vasoconstrictive trigger: 3|local::at0011|Present|
       gt0006|Sex: 0|local::at0015|Male|
       gt0007|Subarachnoid hemorrhage: 1|local::at0017|Present|
-      gt0022|Age: 44,a
+      gt0022|Age: 33,a
   expected_output:
     1:
-      gt0009|Total score: 4
+      gt0009|RCVS2 score: 4
       gt0011|Diagnosis: Equivocal
 - id: 11. Interpretation Positive
   input:
@@ -112,8 +112,8 @@ test_cases:
       gt0005|Vasoconstrictive trigger: 3|local::at0011|Present|
       gt0006|Sex: 0|local::at0015|Male|
       gt0007|Subarachnoid hemorrhage: 1|local::at0017|Present|
-      gt0022|Age: 44,a
+      gt0022|Age: 33,a
   expected_output:
     1:
-      gt0009|Total score: 9
+      gt0009|RCVS2 score: 9
       gt0011|Diagnosis: Positive
