--- a/gdl2/rcvs2_guideline.v1.test.yml
+++ b/gdl2/rcvs2_guideline.v1.test.yml
@@ -10,7 +10,7 @@ test_cases:
   input:
     1:
       gt0003|Recurrent or single TCH: 0|local::at0006|Absent|
-      gt0004|Carotid artery: 0|local::at0009|Not affected|
+      gt0004|Carotid artery (intracranial): 0|local::at0009|Not affected|
       gt0005|Vasoconstrictive trigger: 0|local::at0012|Absent|
       gt0006|Sex: 1|local::at0014|Female|
       gt0007|Subarachnoid hemorrhage: 1|local::at0017|Present|
@@ -21,7 +21,7 @@ test_cases:
   input:
     1:
       gt0003|Recurrent or single TCH: 0|local::at0006|Absent|
-      gt0004|Carotid artery: 0|local::at0009|Not affected|
+      gt0004|Carotid artery (intracranial): 0|local::at0009|Not affected|
       gt0005|Vasoconstrictive trigger: 0|local::at0012|Absent|
       gt0006|Sex: 1|local::at0014|Female|
       gt0007|Subarachnoid hemorrhage: 1|local::at0017|Present|
@@ -31,7 +31,7 @@ test_cases:
 - id: 4. No recurrent or single TCH (negative test)
   input:
     1:
-      gt0004|Carotid artery: 0|local::at0009|Not affected|
+      gt0004|Carotid artery (intracranial): 0|local::at0009|Not affected|
       gt0005|Vasoconstrictive trigger: 0|local::at0012|Absent|
       gt0006|Sex: 1|local::at0014|Female|
       gt0007|Subarachnoid hemorrhage: 1|local::at0017|Present|
@@ -52,7 +52,7 @@ test_cases:
   input:
     1:
       gt0003|Recurrent or single TCH: 5|local::at0005|Present|
-      gt0004|Carotid artery: -2|local::at0008|Affected|
+      gt0004|Carotid artery (intracranial): -2|local::at0008|Affected|
       gt0006|Sex: 1|local::at0014|Female|
       gt0007|Subarachnoid hemorrhage: 1|local::at0017|Present|
       gt0022|Age: 44,a
@@ -62,7 +62,7 @@ test_cases:
   input:
     1:
       gt0003|Recurrent or single TCH: 5|local::at0005|Present|
-      gt0004|Carotid artery: -2|local::at0008|Affected|
+      gt0004|Carotid artery (intracranial): -2|local::at0008|Affected|
       gt0005|Vasoconstrictive trigger: 0|local::at0012|Absent|
       gt0007|Subarachnoid hemorrhage: 1|local::at0017|Present|
       gt0022|Age: 44,a
@@ -72,7 +72,7 @@ test_cases:
   input:
     1:
       gt0003|Recurrent or single TCH: 5|local::at0005|Present|
-      gt0004|Carotid artery: -2|local::at0008|Affected|
+      gt0004|Carotid artery (intracranial): -2|local::at0008|Affected|
       gt0005|Vasoconstrictive trigger: 0|local::at0012|Absent|
       gt0006|Sex: 1|local::at0014|Female|
       gt0022|Age: 44,a
@@ -82,7 +82,7 @@ test_cases:
   input:
     1:
       gt0003|Recurrent or single TCH: 0|local::at0006|Absent|
-      gt0004|Carotid artery: 0|local::at0009|Not affected|
+      gt0004|Carotid artery (intracranial): 0|local::at0009|Not affected|
       gt0005|Vasoconstrictive trigger: 0|local::at0012|Absent|
       gt0006|Sex: 1|local::at0014|Female|
       gt0007|Subarachnoid hemorrhage: 1|local::at0017|Present|
@@ -95,7 +95,7 @@ test_cases:
   input:
     1:
       gt0003|Recurrent or single TCH: 0|local::at0006|Absent|
-      gt0004|Carotid artery: 0|local::at0009|Not affected|
+      gt0004|Carotid artery (intracranial): 0|local::at0009|Not affected|
       gt0005|Vasoconstrictive trigger: 3|local::at0011|Present|
       gt0006|Sex: 0|local::at0015|Male|
       gt0007|Subarachnoid hemorrhage: 1|local::at0017|Present|
@@ -108,7 +108,7 @@ test_cases:
   input:
     1:
       gt0003|Recurrent or single TCH: 5|local::at0005|Present|
-      gt0004|Carotid artery: 0|local::at0009|Not affected|
+      gt0004|Carotid artery (intracranial): 0|local::at0009|Not affected|
       gt0005|Vasoconstrictive trigger: 3|local::at0011|Present|
       gt0006|Sex: 0|local::at0015|Male|
       gt0007|Subarachnoid hemorrhage: 1|local::at0017|Present|
