--- a/gdl2/four_level_pulmonary_embolism_clinical_probability_score.v0.test.yml
+++ b/gdl2/four_level_pulmonary_embolism_clinical_probability_score.v0.test.yml
@@ -1,27 +1,7 @@
 guidelines:
-  1: four_level_pulmonary_embolism_clinical_probability.v0
+  1: new_guideline.v0
 test_cases:
-- id: case_1
-  input:
-    1:
-      gt0003|Age: 0|local::at0039|>64|
-      gt0004|Sex: 0|local::at0040|Female|
-      gt0005|Chronic respiratory disease: 0|local::at0017|No|
-      gt0006|Heart rate <80: 0|local::at0019|No|
-      gt0007|Chest pain AND acute dyspnea: 0|local::at0021|No|
-      gt0008|Current estrogen use: 0|local::at0023|No|
-      gt0009|Prioir history of VTE: 0|local::at0025|No|
-      gt0010|Syncope: 0|local::at0027|No|
-      gt0011|Immobility within the last four weeks*: 0|local::at0029|No|
-      gt0012|O2 saturation <95%: 0|local::at0031|No|
-      gt0013|Calf pain and/or unilateral lower limb edema: 0|local::at0033|No|
-      gt0014|PE is the most likely diagnosis: 0|local::at0035|No|
-  expected_output:
-    1:
-      gt0017|Total: 0
-      gt0020|PE diagnosis: 2|local::at0025|PE can be ruled out if D-dimer level <1.0 μg/mL|
-      gt0019|Clinical probabilty of PE: 2|local::at0020|Low CPP (2-20%)|
-- id: case_2
+- id: total score < 0
   input:
     1:
       gt0003|Age: -2|local::at0037|<50|
@@ -32,56 +12,16 @@ test_cases:
       gt0008|Current estrogen use: 0|local::at0023|No|
       gt0009|Prioir history of VTE: 0|local::at0025|No|
       gt0010|Syncope: 0|local::at0027|No|
-      gt0011|Immobility within the last four weeks*: 0|local::at0029|No|
+      ? gt0011|Immobility within the last four weeks (Surgery, lower limb plaster cast, or bedridden >3 days for acute medical condition within the last four weeks)
+      : 0|local::at0029|No|
       gt0012|O2 saturation <95%: 0|local::at0031|No|
       gt0013|Calf pain and/or unilateral lower limb edema: 0|local::at0033|No|
       gt0014|PE is the most likely diagnosis: 0|local::at0035|No|
   expected_output:
     1:
-      gt0017|Total: -2
-      gt0020|PE diagnosis: 1|local::at0024|PE can be ruled out|
-      gt0019|Clinical probabilty of PE: 1|local::at0019|Very low CPP (<2%)|
-- id: case_3
-  input:
-    1:
-      gt0003|Age: 0|local::at0039|>64|
-      gt0004|Sex: 0|local::at0040|Female|
-      gt0005|Chronic respiratory disease: 0|local::at0017|No|
-      gt0006|Heart rate <80: 0|local::at0019|No|
-      gt0007|Chest pain AND acute dyspnea: 0|local::at0021|No|
-      gt0008|Current estrogen use: 0|local::at0023|No|
-      gt0009|Prioir history of VTE: 2|local::at0026|Yes|
-      gt0010|Syncope: 0|local::at0027|No|
-      gt0011|Immobility within the last four weeks*: 0|local::at0029|No|
-      gt0012|O2 saturation <95%: 0|local::at0031|No|
-      gt0013|Calf pain and/or unilateral lower limb edema: 0|local::at0033|No|
-      gt0014|PE is the most likely diagnosis: 0|local::at0035|No|
-  expected_output:
-    1:
-      gt0017|Total: 2
-      gt0020|PE diagnosis: 2|local::at0025|PE can be ruled out if D-dimer level <1.0 μg/mL|
-      gt0019|Clinical probabilty of PE: 2|local::at0020|Low CPP (2-20%)|
-- id: case_4
-  input:
-    1:
-      gt0003|Age: 0|local::at0039|>64|
-      gt0004|Sex: 0|local::at0040|Female|
-      gt0005|Chronic respiratory disease: 0|local::at0017|No|
-      gt0006|Heart rate <80: 0|local::at0019|No|
-      gt0007|Chest pain AND acute dyspnea: 0|local::at0021|No|
-      gt0008|Current estrogen use: 0|local::at0023|No|
-      gt0009|Prioir history of VTE: 2|local::at0026|Yes|
-      gt0010|Syncope: 0|local::at0027|No|
-      gt0011|Immobility within the last four weeks*: 0|local::at0029|No|
-      gt0012|O2 saturation <95%: 0|local::at0031|No|
-      gt0013|Calf pain and/or unilateral lower limb edema: 3|local::at0034|Yes|
-      gt0014|PE is the most likely diagnosis: 0|local::at0035|No|
-  expected_output:
-    1:
-      gt0017|Total: 5
-      gt0020|PE diagnosis: 2|local::at0025|PE can be ruled out if D-dimer level <1.0 μg/mL|
-      gt0019|Clinical probabilty of PE: 2|local::at0020|Low CPP (2-20%)|
-- id: case_5
+      gt0016|4-PEP score: -2
+      gt0018|Interpretation: Very low clinical pre-test probability(<2%), PE can be ruled out
+- id: total score =0
   input:
     1:
       gt0003|Age: 0|local::at0039|>64|
@@ -92,16 +32,36 @@ test_cases:
       gt0008|Current estrogen use: 0|local::at0023|No|
       gt0009|Prioir history of VTE: 0|local::at0025|No|
       gt0010|Syncope: 0|local::at0027|No|
-      gt0011|Immobility within the last four weeks*: 0|local::at0029|No|
-      gt0012|O2 saturation <95%: 3|local::at0032|Yes|
-      gt0013|Calf pain and/or unilateral lower limb edema: 3|local::at0034|Yes|
+      ? gt0011|Immobility within the last four weeks (Surgery, lower limb plaster cast, or bedridden >3 days for acute medical condition within the last four weeks)
+      : 0|local::at0029|No|
+      gt0012|O2 saturation <95%: 0|local::at0031|No|
+      gt0013|Calf pain and/or unilateral lower limb edema: 0|local::at0033|No|
       gt0014|PE is the most likely diagnosis: 0|local::at0035|No|
   expected_output:
     1:
-      gt0017|Total: 6
-      gt0020|PE diagnosis: 3|local::at0027|PE can be ruled out if D-dimer level <0.5 μg/mL OR <(age x 0.01) μg/mL|
-      gt0019|Clinical probabilty of PE: 3|local::at0021|Moderate CPP (20-65%)|
-- id: case_6
+      gt0016|4-PEP score: 0
+      gt0018|Interpretation: Low clinical pre-test probability (2-20%),PE can be ruled out if D-dimer level <1.0 μg/mL
+- id: total score between 0 and 5
+  input:
+    1:
+      gt0003|Age: 0|local::at0039|>64|
+      gt0004|Sex: 0|local::at0040|Female|
+      gt0005|Chronic respiratory disease: 1|local::at0018|Yes|
+      gt0006|Heart rate <80: 0|local::at0019|No|
+      gt0007|Chest pain AND acute dyspnea: 0|local::at0021|No|
+      gt0008|Current estrogen use: 0|local::at0023|No|
+      gt0009|Prioir history of VTE: 0|local::at0025|No|
+      gt0010|Syncope: 0|local::at0027|No|
+      ? gt0011|Immobility within the last four weeks (Surgery, lower limb plaster cast, or bedridden >3 days for acute medical condition within the last four weeks)
+      : 0|local::at0029|No|
+      gt0012|O2 saturation <95%: 0|local::at0031|No|
+      gt0013|Calf pain and/or unilateral lower limb edema: 0|local::at0033|No|
+      gt0014|PE is the most likely diagnosis: 0|local::at0035|No|
+  expected_output:
+    1:
+      gt0016|4-PEP score: 1
+      gt0018|Interpretation: Low clinical pre-test probability (2-20%),PE can be ruled out if D-dimer level <1.0 μg/mL
+- id: total score = 5
   input:
     1:
       gt0003|Age: 0|local::at0039|>64|
@@ -111,90 +71,130 @@ test_cases:
       gt0007|Chest pain AND acute dyspnea: 0|local::at0021|No|
       gt0008|Current estrogen use: 0|local::at0023|No|
       gt0009|Prioir history of VTE: 0|local::at0025|No|
-      gt0010|Syncope: 2|local::at0028|Yes|
-      gt0011|Immobility within the last four weeks*: 0|local::at0029|No|
-      gt0012|O2 saturation <95%: 3|local::at0032|Yes|
-      gt0013|Calf pain and/or unilateral lower limb edema: 3|local::at0034|Yes|
-      gt0014|PE is the most likely diagnosis: 0|local::at0035|No|
+      gt0010|Syncope: 0|local::at0027|No|
+      ? gt0011|Immobility within the last four weeks (Surgery, lower limb plaster cast, or bedridden >3 days for acute medical condition within the last four weeks)
+      : 0|local::at0029|No|
+      gt0012|O2 saturation <95%: 0|local::at0031|No|
+      gt0013|Calf pain and/or unilateral lower limb edema: 0|local::at0033|No|
+      gt0014|PE is the most likely diagnosis: 5|local::at0036|Yes|
   expected_output:
     1:
-      gt0017|Total: 8
-      gt0020|PE diagnosis: 3|local::at0027|PE can be ruled out if D-dimer level <0.5 μg/mL OR <(age x 0.01) μg/mL|
-      gt0019|Clinical probabilty of PE: 3|local::at0021|Moderate CPP (20-65%)|
-- id: case_7
+      gt0016|4-PEP score: 5
+      gt0018|Interpretation: Low clinical pre-test probability (2-20%),PE can be ruled out if D-dimer level <1.0 μg/mL
+- id: total score = 6 
   input:
     1:
       gt0003|Age: 0|local::at0039|>64|
-      gt0004|Sex: 2|local::at0041|Male|
-      gt0005|Chronic respiratory disease: 0|local::at0017|No|
-      gt0006|Heart rate <80: 0|local::at0019|No|
-      gt0007|Chest pain AND acute dyspnea: 0|local::at0021|No|
-      gt0008|Current estrogen use: 0|local::at0023|No|
-      gt0009|Prioir history of VTE: 2|local::at0026|Yes|
-      gt0010|Syncope: 2|local::at0028|Yes|
-      gt0011|Immobility within the last four weeks*: 0|local::at0029|No|
-      gt0012|O2 saturation <95%: 3|local::at0032|Yes|
-      gt0013|Calf pain and/or unilateral lower limb edema: 3|local::at0034|Yes|
-      gt0014|PE is the most likely diagnosis: 0|local::at0035|No|
-  expected_output:
-    1:
-      gt0017|Total: 12
-      gt0020|PE diagnosis: 3|local::at0027|PE can be ruled out if D-dimer level <0.5 μg/mL OR <(age x 0.01) μg/mL|
-      gt0019|Clinical probabilty of PE: 3|local::at0021|Moderate CPP (20-65%)|
-- id: case_8
-  input:
-    1:
-      gt0003|Age: 0|local::at0039|>64|
-      gt0004|Sex: 2|local::at0041|Male|
+      gt0004|Sex: 0|local::at0040|Female|
       gt0005|Chronic respiratory disease: 0|local::at0017|No|
       gt0006|Heart rate <80: 0|local::at0019|No|
       gt0007|Chest pain AND acute dyspnea: 1|local::at0022|Yes|
       gt0008|Current estrogen use: 0|local::at0023|No|
-      gt0009|Prioir history of VTE: 2|local::at0026|Yes|
-      gt0010|Syncope: 2|local::at0028|Yes|
-      gt0011|Immobility within the last four weeks*: 0|local::at0029|No|
-      gt0012|O2 saturation <95%: 3|local::at0032|Yes|
-      gt0013|Calf pain and/or unilateral lower limb edema: 3|local::at0034|Yes|
-      gt0014|PE is the most likely diagnosis: 0|local::at0035|No|
+      gt0009|Prioir history of VTE: 0|local::at0025|No|
+      gt0010|Syncope: 0|local::at0027|No|
+      ? gt0011|Immobility within the last four weeks (Surgery, lower limb plaster cast, or bedridden >3 days for acute medical condition within the last four weeks)
+      : 0|local::at0029|No|
+      gt0012|O2 saturation <95%: 0|local::at0031|No|
+      gt0013|Calf pain and/or unilateral lower limb edema: 0|local::at0033|No|
+      gt0014|PE is the most likely diagnosis: 5|local::at0036|Yes|
   expected_output:
     1:
-      gt0017|Total: 13
-      gt0020|PE diagnosis: 4|local::at0028|PE cannot be ruled out without imaging testing|
-      gt0019|Clinical probabilty of PE: 4|local::at0022|High CPP (>65%)|
-- id: case_9
-  input:
-    1:
-      gt0003|Age: 0|local::at0039|>64|
-      gt0004|Sex: 2|local::at0041|Male|
-      gt0005|Chronic respiratory disease: 0|local::at0017|No|
-      gt0006|Heart rate <80: 0|local::at0019|No|
-      gt0007|Chest pain AND acute dyspnea: 1|local::at0022|Yes|
-      gt0008|Current estrogen use: 2|local::at0024|Yes|
-      gt0009|Prioir history of VTE: 2|local::at0026|Yes|
-      gt0010|Syncope: 2|local::at0028|Yes|
-      gt0011|Immobility within the last four weeks*: 0|local::at0029|No|
-      gt0012|O2 saturation <95%: 3|local::at0032|Yes|
-      gt0013|Calf pain and/or unilateral lower limb edema: 3|local::at0034|Yes|
-      gt0014|PE is the most likely diagnosis: 0|local::at0035|No|
-  expected_output:
-    1:
-      gt0017|Total: 15
-      gt0020|PE diagnosis: 4|local::at0028|PE cannot be ruled out without imaging testing|
-      gt0019|Clinical probabilty of PE: 4|local::at0022|High CPP (>65%)|
-- id: case_10
+      gt0016|4-PEP score: 6
+      gt0018|Interpretation: Moderate clinical pre-test probability(20-65%), PE can be ruled out if D-dimer level <0.5 μg/mL OR <(age x 0.01) μg/mL
+- id: total score between 6 and 12
   input:
     1:
       gt0003|Age: 0|local::at0039|>64|
       gt0004|Sex: 0|local::at0040|Female|
       gt0005|Chronic respiratory disease: 0|local::at0017|No|
       gt0006|Heart rate <80: 0|local::at0019|No|
-      gt0007|Chest pain AND acute dyspnea: 0|local::at0021|No|
+      gt0007|Chest pain AND acute dyspnea: 1|local::at0022|Yes|
       gt0008|Current estrogen use: 0|local::at0023|No|
       gt0009|Prioir history of VTE: 0|local::at0025|No|
       gt0010|Syncope: 0|local::at0027|No|
-      gt0011|Immobility within the last four weeks*: 0|local::at0029|No|
+      ? gt0011|Immobility within the last four weeks (Surgery, lower limb plaster cast, or bedridden >3 days for acute medical condition within the last four weeks)
+      : 0|local::at0029|No|
+      gt0012|O2 saturation <95%: 3|local::at0032|Yes|
       gt0013|Calf pain and/or unilateral lower limb edema: 0|local::at0033|No|
-      gt0014|PE is the most likely diagnosis: 0|local::at0035|No|
+      gt0014|PE is the most likely diagnosis: 5|local::at0036|Yes|
+  expected_output:
+    1:
+      gt0016|4-PEP score: 9
+      gt0018|Interpretation: Moderate clinical pre-test probability(20-65%), PE can be ruled out if D-dimer level <0.5 μg/mL OR <(age x 0.01) μg/mL
+- id: total score = 12
+  input:
+    1:
+      gt0003|Age: 0|local::at0039|>64|
+      gt0004|Sex: 0|local::at0040|Female|
+      gt0005|Chronic respiratory disease: 0|local::at0017|No|
+      gt0006|Heart rate <80: -1|local::at0020|Yes|
+      gt0007|Chest pain AND acute dyspnea: 1|local::at0022|Yes|
+      gt0008|Current estrogen use: 0|local::at0023|No|
+      gt0009|Prioir history of VTE: 2|local::at0026|Yes|
+      gt0010|Syncope: 0|local::at0027|No|
+      ? gt0011|Immobility within the last four weeks (Surgery, lower limb plaster cast, or bedridden >3 days for acute medical condition within the last four weeks)
+      : 2|local::at0030|Yes|
+      gt0012|O2 saturation <95%: 3|local::at0032|Yes|
+      gt0013|Calf pain and/or unilateral lower limb edema: 0|local::at0033|No|
+      gt0014|PE is the most likely diagnosis: 5|local::at0036|Yes|
+  expected_output:
+    1:
+      gt0016|4-PEP score: 12
+      gt0018|Interpretation: Moderate clinical pre-test probability(20-65%), PE can be ruled out if D-dimer level <0.5 μg/mL OR <(age x 0.01) μg/mL
+- id: total score =13
+  input:
+    1:
+      gt0003|Age: 0|local::at0039|>64|
+      gt0004|Sex: 0|local::at0040|Female|
+      gt0005|Chronic respiratory disease: 1|local::at0018|Yes|
+      gt0006|Heart rate <80: -1|local::at0020|Yes|
+      gt0007|Chest pain AND acute dyspnea: 1|local::at0022|Yes|
+      gt0008|Current estrogen use: 0|local::at0023|No|
+      gt0009|Prioir history of VTE: 2|local::at0026|Yes|
+      gt0010|Syncope: 0|local::at0027|No|
+      ? gt0011|Immobility within the last four weeks (Surgery, lower limb plaster cast, or bedridden >3 days for acute medical condition within the last four weeks)
+      : 2|local::at0030|Yes|
+      gt0012|O2 saturation <95%: 3|local::at0032|Yes|
+      gt0013|Calf pain and/or unilateral lower limb edema: 0|local::at0033|No|
+      gt0014|PE is the most likely diagnosis: 5|local::at0036|Yes|
+  expected_output:
+    1:
+      gt0016|4-PEP score: 13
+      gt0018|Interpretation: High clinical pre-test probability (>65%),PE cannot be ruled out without imaging testing
+- id: missing input
+  input:
+    1:
+      gt0003|Age: 0|local::at0039|>64|
+      gt0004|Sex: 0|local::at0040|Female|
+      gt0005|Chronic respiratory disease: 1|local::at0018|Yes|
+      gt0006|Heart rate <80: -1|local::at0020|Yes|
+      gt0007|Chest pain AND acute dyspnea: 1|local::at0022|Yes|
+      gt0009|Prioir history of VTE: 2|local::at0026|Yes|
+      gt0010|Syncope: 0|local::at0027|No|
+      ? gt0011|Immobility within the last four weeks (Surgery, lower limb plaster cast, or bedridden >3 days for acute medical condition within the last four weeks)
+      : 2|local::at0030|Yes|
+      gt0012|O2 saturation <95%: 3|local::at0032|Yes|
+      gt0013|Calf pain and/or unilateral lower limb edema: 0|local::at0033|No|
+      gt0014|PE is the most likely diagnosis: 5|local::at0036|Yes|
   expected_output:
     1: {}
-
+- id: total score > 13
+  input:
+    1:
+      gt0003|Age: 0|local::at0039|>64|
+      gt0004|Sex: 0|local::at0040|Female|
+      gt0005|Chronic respiratory disease: 1|local::at0018|Yes|
+      gt0006|Heart rate <80: -1|local::at0020|Yes|
+      gt0007|Chest pain AND acute dyspnea: 1|local::at0022|Yes|
+      gt0008|Current estrogen use: 0|local::at0023|No|
+      gt0009|Prioir history of VTE: 2|local::at0026|Yes|
+      gt0010|Syncope: 2|local::at0028|Yes|
+      ? gt0011|Immobility within the last four weeks (Surgery, lower limb plaster cast, or bedridden >3 days for acute medical condition within the last four weeks)
+      : 2|local::at0030|Yes|
+      gt0012|O2 saturation <95%: 3|local::at0032|Yes|
+      gt0013|Calf pain and/or unilateral lower limb edema: 0|local::at0033|No|
+      gt0014|PE is the most likely diagnosis: 5|local::at0036|Yes|
+  expected_output:
+    1:
+      gt0016|4-PEP score: 15
+      gt0018|Interpretation: High clinical pre-test probability (>65%),PE cannot be ruled out without imaging testing
