--- a/gdl2/NEWS.v1.test.yml
+++ b/gdl2/NEWS.v1.test.yml
@@ -1,163 +1,113 @@
 guidelines:
   1: NEWS.v1
 test_cases:
-  - id: news=6, hypothermia
-    input:
-      1:
-        gt0016|AVPU Observation: local::at0005|Alert|
-        gt0015|Temperature: 35,Cel
-        gt0014|Systolic: 88,mm[Hg]
-        gt0013|Rate: 90,/min
-        gt0012|SaO2: 99,%
-        gt0011|Oxygen therapy: 0|local::at0006|Absent|
-        gt0010|Respiration rate: 20,/min
-    expected_output:
-      1:
-        gt0019|Supplemental oxygen: 0|local::at0036|No|
-        gt0024|Level of consciousness: 0|local::at0024|A|
-        gt0025|Total score: 6
-        gt0017|Respiration rate: 0|local::at0018|12-20|
-        gt0018|Oxygen saturation: 0|local::at0030|≥96|
-        gt0020|Body temperature: 3|local::at0039|≤35.0|
-        gt0023|Heart rate: 0|local::at0013|51-90|
-        gt0022|Systolic blood pressure: 3|local::at0017|≤90 or ≥220|
-        gt0054|Frequency of monitoring: 2|local::at0010|Increased frequency to a minimum of 1 hourly|
-        gt0053|NEWS Assessment: 2|local::at0006|Medium-risk group|
-
-  - id: lower HR, higher T
-    input:
-      1:
-        gt0016|AVPU Observation: local::at0005|Alert|
-        gt0015|Temperature: 36,Cel
-        gt0014|Systolic: 88,mm[Hg]
-        gt0013|Rate: 49,/min
-        gt0012|SaO2: 99,%
-        gt0011|Oxygen therapy: 0|local::at0006|Absent|
-        gt0010|Respiration rate: 20,/min
-    expected_output:
-      1:
-        gt0019|Supplemental oxygen: 0|local::at0036|No|
-        gt0024|Level of consciousness: 0|local::at0024|A|
-        gt0025|Total score: 5
-        gt0017|Respiration rate: 0|local::at0018|12-20|
-        gt0018|Oxygen saturation: 0|local::at0030|≥96|
-        gt0020|Body temperature: 1|local::at0023|35.1-36.0 or 38.1-39.0|
-        gt0023|Heart rate: 1|local::at0012|41-50 or 91-110|
-        gt0022|Systolic blood pressure: 3|local::at0017|≤90 or ≥220|
-        gt0054|Frequency of monitoring: 2|local::at0010|Increased frequency to a minimum of 1 hourly|
-        gt0053|NEWS Assessment: 2|local::at0006|Medium-risk group|
-
-  - id: Voice, low BP, lower O2
-    input:
-      1:
-        gt0016|AVPU Observation: local::at0006|Voice|
-        gt0015|Temperature: 37,Cel
-        gt0014|Systolic: 88,mm[Hg]
-        gt0013|Rate: 49,/min
-        gt0012|SaO2: 95,%
-        gt0011|Oxygen therapy: 0|local::at0006|Absent|
-        gt0010|Respiration rate: 20,/min
-    expected_output:
-      1:
-        gt0019|Supplemental oxygen: 0|local::at0036|No|
-        gt0024|Level of consciousness: 3|local::at0025|V, P or U|
-        gt0025|Total score: 8
-        gt0017|Respiration rate: 0|local::at0018|12-20|
-        gt0018|Oxygen saturation: 1|local::at0031|94-95|
-        gt0020|Body temperature: 0|local::at0022|36.1-38.0|
-        gt0023|Heart rate: 1|local::at0012|41-50 or 91-110|
-        gt0022|Systolic blood pressure: 3|local::at0017|≤90 or ≥220|
-        gt0054|Frequency of monitoring: 3|local::at0011|Continuous monitoring of vital signs|
-        gt0053|NEWS Assessment: 3|local::at0007|High-risk group|
-
-  - id: pain, supplement O2, lower o2, higher RR, very low HR
-    input:
-      1:
-        gt0016|AVPU Observation: local::at0007|Pain|
-        gt0015|Temperature: 37,Cel
-        gt0014|Systolic: 88,mm[Hg]
-        gt0013|Rate: 40,/min
-        gt0012|SaO2: 93,%
-        gt0011|Oxygen therapy: 1|local::at0007|Present|
-        gt0010|Respiration rate: 21,/min
-    expected_output:
-      1:
-        gt0019|Supplemental oxygen: 2|local::at0037|Yes|
-        gt0024|Level of consciousness: 3|local::at0025|V, P or U|
-        gt0025|Total score: 15
-        gt0017|Respiration rate: 2|local::at0020|21-24|
-        gt0018|Oxygen saturation: 2|local::at0032|92-93|
-        gt0020|Body temperature: 0|local::at0022|36.1-38.0|
-        gt0023|Heart rate: 3|local::at0010|≤40 or ≥131|
-        gt0022|Systolic blood pressure: 3|local::at0017|≤90 or ≥220|
-        gt0054|Frequency of monitoring: 3|local::at0011|Continuous monitoring of vital signs|
-        gt0053|NEWS Assessment: 3|local::at0007|High-risk group|
-
-  - id: sao2 very low, unresponsive, very high HR
-    input:
-      1:
-        gt0016|AVPU Observation: local::at0008|Unresponsive|
-        gt0015|Temperature: 38,Cel
-        gt0014|Systolic: 93,mm[Hg]
-        gt0013|Rate: 131,/min
-        gt0012|SaO2: 91,%
-        gt0011|Oxygen therapy: 1|local::at0007|Present|
-        gt0010|Respiration rate: 11,/min
-    expected_output:
-      1:
-        gt0019|Supplemental oxygen: 2|local::at0037|Yes|
-        gt0024|Level of consciousness: 3|local::at0025|V, P or U|
-        gt0025|Total score: 14
-        gt0017|Respiration rate: 1|local::at0019|9-11|
-        gt0018|Oxygen saturation: 3|local::at0033|≤91|
-        gt0020|Body temperature: 0|local::at0022|36.1-38.0|
-        gt0023|Heart rate: 3|local::at0010|≤40 or ≥131|
-        gt0022|Systolic blood pressure: 2|local::at0016|91-100|
-        gt0054|Frequency of monitoring: 3|local::at0011|Continuous monitoring of vital signs|
-        gt0053|NEWS Assessment: 3|local::at0007|High-risk group|
-
-  - id: fever, very low RR
-    input:
-      1:
-        gt0016|AVPU Observation: local::at0008|Unresponsive|
-        gt0015|Temperature: 39,Cel
-        gt0014|Systolic: 101,mm[Hg]
-        gt0013|Rate: 127,/min
-        gt0012|SaO2: 91,%
-        gt0011|Oxygen therapy: 1|local::at0007|Present|
-        gt0010|Respiration rate: 8,/min
-    expected_output:
-      1:
-        gt0019|Supplemental oxygen: 2|local::at0037|Yes|
-        gt0024|Level of consciousness: 3|local::at0025|V, P or U|
-        gt0025|Total score: 15
-        gt0017|Respiration rate: 3|local::at0021|≤8 or ≥25|
-        gt0018|Oxygen saturation: 3|local::at0033|≤91|
-        gt0020|Body temperature: 1|local::at0023|35.1-36.0 or 38.1-39.0|
-        gt0023|Heart rate: 2|local::at0011|111-130|
-        gt0022|Systolic blood pressure: 1|local::at0015|101-110|
-        gt0054|Frequency of monitoring: 3|local::at0011|Continuous monitoring of vital signs|
-        gt0053|NEWS Assessment: 3|local::at0007|High-risk group|
-
-  - id: low o2, fever, stable circulation
-    input:
-      1:
-        gt0016|AVPU Observation: local::at0008|Unresponsive|
-        gt0015|Temperature: 40,Cel
-        gt0014|Systolic: 111,mm[Hg]
-        gt0013|Rate: 110,/min
-        gt0012|SaO2: 91,%
-        gt0011|Oxygen therapy: 1|local::at0007|Present|
-        gt0010|Respiration rate: 25,/min
-    expected_output:
-      1:
-        gt0019|Supplemental oxygen: 2|local::at0037|Yes|
-        gt0024|Level of consciousness: 3|local::at0025|V, P or U|
-        gt0025|Total score: 14
-        gt0017|Respiration rate: 3|local::at0021|≤8 or ≥25|
-        gt0018|Oxygen saturation: 3|local::at0033|≤91|
-        gt0020|Body temperature: 2|local::at0038|≥39.1|
-        gt0023|Heart rate: 1|local::at0012|41-50 or 91-110|
-        gt0022|Systolic blood pressure: 0|local::at0014|111-219|
-        gt0054|Frequency of monitoring: 3|local::at0011|Continuous monitoring of vital signs|
-        gt0053|NEWS Assessment: 3|local::at0007|High-risk group|
+- id: 1. No input
+  input:
+    1: {}
+  expected_output:
+    1: {}
+- id: 2. Hypothermia
+  input:
+    1:
+      gt0067|Respiration rate: 0|local::at0018|12-20|
+      gt0069|Oxygen saturation: 0|local::at0030|≥96|
+      gt0071|Supplemental oxygen: 0|local::at0036|No|
+      gt0072|Body temperature: 3|local::at0039|≤35.0|
+      gt0073|Systolic blood pressure: 3|local::at0017|≤90 or ≥220|
+      gt0074|Heart rate: 0|local::at0013|51-90|
+      gt0075|Level of consciousness: 0|local::at0024|A|
+  expected_output:
+    1:
+      gt0025|Total score: 6
+      gt0080|Frequency of monitoring: Increased frequency to a minimum of 1 hourly
+      gt0079|NEWS Assessment: Medium-risk group
+- id: 3. Lower HR, higher T
+  input:
+    1:
+      gt0067|Respiration rate: 0|local::at0018|12-20|
+      gt0069|Oxygen saturation: 0|local::at0030|≥96|
+      gt0071|Supplemental oxygen: 0|local::at0036|No|
+      gt0072|Body temperature: 1|local::at0023|35.1-36.0 or 38.1-39.0|
+      gt0073|Systolic blood pressure: 3|local::at0017|≤90 or ≥220|
+      gt0074|Heart rate: 1|local::at0012|41-50 or 91-110|
+      gt0075|Level of consciousness: 0|local::at0024|A|
+  expected_output:
+    1:
+      gt0025|Total score: 5
+      gt0080|Frequency of monitoring: Increased frequency to a minimum of 1 hourly
+      gt0079|NEWS Assessment: Medium-risk group
+- id: 4. Voice, low BP, lower O2
+  input:
+    1:
+      gt0067|Respiration rate: 0|local::at0018|12-20|
+      gt0069|Oxygen saturation: 1|local::at0031|94-95|
+      gt0071|Supplemental oxygen: 0|local::at0036|No|
+      gt0072|Body temperature: 0|local::at0022|36.1-38.0|
+      gt0073|Systolic blood pressure: 3|local::at0017|≤90 or ≥220|
+      gt0074|Heart rate: 1|local::at0012|41-50 or 91-110|
+      gt0075|Level of consciousness: 3|local::at0025|V, P or U|
+  expected_output:
+    1:
+      gt0025|Total score: 8
+      gt0080|Frequency of monitoring: Continuous monitoring of vital signs
+      gt0079|NEWS Assessment: High-risk group
+- id: 5. Pain, supplement 02, lower O2, higher RR, very low HR
+  input:
+    1:
+      gt0067|Respiration rate: 2|local::at0020|21-24|
+      gt0069|Oxygen saturation: 2|local::at0032|92-93|
+      gt0071|Supplemental oxygen: 2|local::at0037|Yes|
+      gt0072|Body temperature: 0|local::at0022|36.1-38.0|
+      gt0073|Systolic blood pressure: 3|local::at0017|≤90 or ≥220|
+      gt0074|Heart rate: 3|local::at0010|≤40 or ≥131|
+      gt0075|Level of consciousness: 3|local::at0025|V, P or U|
+  expected_output:
+    1:
+      gt0025|Total score: 15
+      gt0080|Frequency of monitoring: Continuous monitoring of vital signs
+      gt0079|NEWS Assessment: High-risk group
+- id: 6. SaO2 very low, unresponsive, very high HR
+  input:
+    1:
+      gt0067|Respiration rate: 1|local::at0019|9-11|
+      gt0069|Oxygen saturation: 3|local::at0033|≤91|
+      gt0071|Supplemental oxygen: 2|local::at0037|Yes|
+      gt0072|Body temperature: 0|local::at0022|36.1-38.0|
+      gt0073|Systolic blood pressure: 2|local::at0016|91-100|
+      gt0074|Heart rate: 3|local::at0010|≤40 or ≥131|
+      gt0075|Level of consciousness: 3|local::at0025|V, P or U|
+  expected_output:
+    1:
+      gt0025|Total score: 14
+      gt0080|Frequency of monitoring: Continuous monitoring of vital signs
+      gt0079|NEWS Assessment: High-risk group
+- id: 7. Fever, very low RR
+  input:
+    1:
+      gt0067|Respiration rate: 3|local::at0021|≤8 or ≥25|
+      gt0069|Oxygen saturation: 3|local::at0033|≤91|
+      gt0071|Supplemental oxygen: 2|local::at0037|Yes|
+      gt0072|Body temperature: 1|local::at0023|35.1-36.0 or 38.1-39.0|
+      gt0073|Systolic blood pressure: 1|local::at0015|101-110|
+      gt0074|Heart rate: 2|local::at0011|111-130|
+      gt0075|Level of consciousness: 3|local::at0025|V, P or U|
+  expected_output:
+    1:
+      gt0025|Total score: 15
+      gt0080|Frequency of monitoring: Continuous monitoring of vital signs
+      gt0079|NEWS Assessment: High-risk group
+- id: 8. Low O2, fever, stable circulation
+  input:
+    1:
+      gt0067|Respiration rate: 3|local::at0021|≤8 or ≥25|
+      gt0069|Oxygen saturation: 3|local::at0033|≤91|
+      gt0071|Supplemental oxygen: 2|local::at0037|Yes|
+      gt0072|Body temperature: 2|local::at0038|≥39.1|
+      gt0073|Systolic blood pressure: 0|local::at0014|111-219|
+      gt0074|Heart rate: 1|local::at0012|41-50 or 91-110|
+      gt0075|Level of consciousness: 3|local::at0025|V, P or U|
+  expected_output:
+    1:
+      gt0025|Total score: 14
+      gt0080|Frequency of monitoring: Continuous monitoring of vital signs
+      gt0079|NEWS Assessment: High-risk group
