--- a/gdl2/cahp_guideline.v1.test.yml
+++ b/gdl2/cahp_guideline.v1.test.yml
@@ -9,11 +9,11 @@ test_cases:
 - id: 2. No age (negative test)
   input:
     1:
-      gt0005|Arrest setting: 0|local::at0007|Public Setting|
-      gt0006|Shockable rhythm: 27|local::at0011|No|
-      gt0007|Collapse-BLS duration: 22,min
-      gt0008|BLS-ROSC duration: 30,min
-      gt0009|pH: 6,1
+      gt0005|Arrest Setting: 0|local::at0007|Public Setting|
+      gt0006|Initial Shockable Rhythm: 27|local::at0011|No|
+      gt0007|Collapse-BLS Duration: 22,min
+      gt0008|BLS-ROSC Duration: 30,min
+      gt0009|Admission pH: 6.1,1
       gt0010|Epinephrine: 27|local::at0020|1-2|
   expected_output:
     1: {}
@@ -21,10 +21,10 @@ test_cases:
   input:
     1:
       gt0003|Age: 30,a
-      gt0006|Shockable rhythm: 27|local::at0011|No|
-      gt0007|Collapse-BLS duration: 22,min
-      gt0008|BLS-ROSC duration: 30,min
-      gt0009|pH: 6,1
+      gt0006|Initial Shockable Rhythm: 27|local::at0011|No|
+      gt0007|Collapse-BLS Duration: 22,min
+      gt0008|BLS-ROSC Duration: 30,min
+      gt0009|Admission pH: 6.1,1
       gt0010|Epinephrine: 27|local::at0020|1-2|
   expected_output:
     1: {}
@@ -32,10 +32,10 @@ test_cases:
   input:
     1:
       gt0003|Age: 30,a
-      gt0005|Arrest setting: 24|local::at0008|Home|
-      gt0007|Collapse-BLS duration: 22,min
-      gt0008|BLS-ROSC duration: 30,min
-      gt0009|pH: 6,1
+      gt0005|Arrest Setting: 24|local::at0008|Home|
+      gt0007|Collapse-BLS Duration: 22,min
+      gt0008|BLS-ROSC Duration: 30,min
+      gt0009|Admission pH: 6.1,1
       gt0010|Epinephrine: 27|local::at0020|1-2|
   expected_output:
     1: {}
@@ -43,10 +43,10 @@ test_cases:
   input:
     1:
       gt0003|Age: 30,a
-      gt0005|Arrest setting: 24|local::at0008|Home|
-      gt0006|Shockable rhythm: 27|local::at0011|No|
-      gt0008|BLS-ROSC duration: 30,min
-      gt0009|pH: 6,1
+      gt0005|Arrest Setting: 24|local::at0008|Home|
+      gt0006|Initial Shockable Rhythm: 27|local::at0011|No|
+      gt0008|BLS-ROSC Duration: 30,min
+      gt0009|Admission pH: 6.1,1
       gt0010|Epinephrine: 27|local::at0020|1-2|
   expected_output:
     1: {}
@@ -54,10 +54,10 @@ test_cases:
   input:
     1:
       gt0003|Age: 30,a
-      gt0005|Arrest setting: 24|local::at0008|Home|
-      gt0006|Shockable rhythm: 27|local::at0011|No|
-      gt0007|Collapse-BLS duration: 22,min
-      gt0009|pH: 6,1
+      gt0005|Arrest Setting: 24|local::at0008|Home|
+      gt0006|Initial Shockable Rhythm: 27|local::at0011|No|
+      gt0007|Collapse-BLS Duration: 22,min
+      gt0009|Admission pH: 6.1,1
       gt0010|Epinephrine: 27|local::at0020|1-2|
   expected_output:
     1: {}
@@ -65,10 +65,10 @@ test_cases:
   input:
     1:
       gt0003|Age: 30,a
-      gt0005|Arrest setting: 24|local::at0008|Home|
-      gt0006|Shockable rhythm: 27|local::at0011|No|
-      gt0007|Collapse-BLS duration: 22,min
-      gt0008|BLS-ROSC duration: 30,min
+      gt0005|Arrest Setting: 24|local::at0008|Home|
+      gt0006|Initial Shockable Rhythm: 27|local::at0011|No|
+      gt0007|Collapse-BLS Duration: 22,min
+      gt0008|BLS-ROSC Duration: 30,min
       gt0010|Epinephrine: 27|local::at0020|1-2|
   expected_output:
     1: {}
@@ -76,55 +76,55 @@ test_cases:
   input:
     1:
       gt0003|Age: 30,a
-      gt0005|Arrest setting: 24|local::at0008|Home|
-      gt0006|Shockable rhythm: 27|local::at0011|No|
-      gt0007|Collapse-BLS duration: 22,min
-      gt0008|BLS-ROSC duration: 30,min
-      gt0009|pH: 6,1
+      gt0005|Arrest Setting: 24|local::at0008|Home|
+      gt0006|Initial Shockable Rhythm: 27|local::at0011|No|
+      gt0007|Collapse-BLS Duration: 22,min
+      gt0008|BLS-ROSC Duration: 30,min
+      gt0009|Admission pH: 7,1
   expected_output:
     1: {}
 - id: 9. Interpretation Low
   input:
     1:
       gt0003|Age: 30,a
-      gt0005|Arrest setting: 0|local::at0007|Public Setting|
-      gt0006|Shockable rhythm: 0|local::at0010|Yes|
-      gt0007|Collapse-BLS duration: 15,min
-      gt0008|BLS-ROSC duration: 21,min
-      gt0009|pH: 7,1
+      gt0005|Arrest Setting: 0|local::at0007|Public Setting|
+      gt0006|Initial Shockable Rhythm: 0|local::at0010|Yes|
+      gt0007|Collapse-BLS Duration: 15,min
+      gt0008|BLS-ROSC Duration: 21,min
+      gt0009|Admission pH: 7.1,1
       gt0010|Epinephrine: 0|local::at0019|0|
   expected_output:
     1:
-      gt0012|CAHP score: 126
-      gt0015|Risk of poor outcome: local::at0007|Low|
-      gt0016|Risk of poor neurological outcome: 39,%
+      gt0012|CAHP score: 119,1
+      gt0015|Risk of poor outcome: Low
+      gt0016|Risk of poor neurological outcome: local::at0011|39%|
 - id: 10. Interpretation Moderate
   input:
     1:
       gt0003|Age: 30,a
-      gt0005|Arrest setting: 0|local::at0007|Public Setting|
-      gt0006|Shockable rhythm: 0|local::at0010|Yes|
-      gt0007|Collapse-BLS duration: 35,min
-      gt0008|BLS-ROSC duration: 21,min
-      gt0009|pH: 7,1
+      gt0005|Arrest Setting: 0|local::at0007|Public Setting|
+      gt0006|Initial Shockable Rhythm: 0|local::at0010|Yes|
+      gt0007|Collapse-BLS Duration: 35,min
+      gt0008|BLS-ROSC Duration: 21,min
+      gt0009|Admission pH: 7.1,1
       gt0010|Epinephrine: 0|local::at0019|0|
   expected_output:
     1:
-      gt0012|CAHP score: 182
-      gt0015|Risk of poor outcome: local::at0008|Moderate|
-      gt0016|Risk of poor neurological outcome: 81,%
+      gt0012|CAHP score: 175,1
+      gt0015|Risk of poor outcome: Moderate
+      gt0016|Risk of poor neurological outcome: local::at0012|81%|
 - id: 11. Interpretation High
   input:
     1:
       gt0003|Age: 60,a
-      gt0005|Arrest setting: 0|local::at0007|Public Setting|
-      gt0006|Shockable rhythm: 0|local::at0010|Yes|
-      gt0007|Collapse-BLS duration: 40,min
-      gt0008|BLS-ROSC duration: 21,min
-      gt0009|pH: 6,1
+      gt0005|Arrest Setting: 0|local::at0007|Public Setting|
+      gt0006|Initial Shockable Rhythm: 0|local::at0010|Yes|
+      gt0007|Collapse-BLS Duration: 40,min
+      gt0008|BLS-ROSC Duration: 21,min
+      gt0009|Admission pH: 6.1,1
       gt0010|Epinephrine: 0|local::at0019|0|
   expected_output:
     1:
-      gt0012|CAHP score: 306
-      gt0015|Risk of poor outcome: local::at0009|High|
-      gt0016|Risk of poor neurological outcome: 100,%
+      gt0012|CAHP score: 299,1
+      gt0015|Risk of poor outcome: High
+      gt0016|Risk of poor neurological outcome: local::at0013|100%|
