--- a/gdl2/IMPROVEDD_risk_score.v1.test.yml
+++ b/gdl2/IMPROVEDD_risk_score.v1.test.yml
@@ -1,7 +1,7 @@
 guidelines:
-  1: IMPROVEDD_risk_score.v0
+  1: IMPROVEDD_risk_score.v1
 test_cases:
-- id: test 1
+- id: 1. Total score 0
   input:
     1:
       gt0046|Previous VTE: 0|local::at0009|No|
@@ -17,7 +17,7 @@ test_cases:
       gt0055|Total score: 0
       gt0058|77-day VTE risk: local::at0026|0.5%|
       gt0057|42-day VTE risk: local::at0019|0.4%|
-- id: test 2
+- id: 2. Total score 1
   input:
     1:
       gt0046|Previous VTE: 0|local::at0009|No|
@@ -33,7 +33,7 @@ test_cases:
       gt0055|Total score: 1
       gt0058|77-day VTE risk: local::at0027|0.7%|
       gt0057|42-day VTE risk: local::at0020|0.6%|
-- id: test 3
+- id: 3. Total score 2
   input:
     1:
       gt0046|Previous VTE: 0|local::at0009|No|
@@ -49,7 +49,7 @@ test_cases:
       gt0055|Total score: 2
       gt0058|77-day VTE risk: local::at0028|1.0%|
       gt0057|42-day VTE risk: local::at0021|0.8%|
-- id: test 4
+- id: 4. Total score 3
   input:
     1:
       gt0046|Previous VTE: 0|local::at0009|No|
@@ -65,7 +65,7 @@ test_cases:
       gt0055|Total score: 3
       gt0058|77-day VTE risk: local::at0029|1.4%|
       gt0057|42-day VTE risk: local::at0022|1.2%|
-- id: test 5
+- id: 5. Total score 4
   input:
     1:
       gt0046|Previous VTE: 0|local::at0009|No|
@@ -81,7 +81,7 @@ test_cases:
       gt0055|Total score: 4
       gt0058|77-day VTE risk: local::at0030|1.9%|
       gt0057|42-day VTE risk: local::at0023|1.6%|
-- id: test 6
+- id: 6. Total score 6
   input:
     1:
       gt0046|Previous VTE: 0|local::at0009|No|
